--- a/index.css
+++ b/index.css
@@ -861,5 +861,9 @@ footer .credit p span{
         width: 370px;
     }
 }
+@media (max-width:450px)) {
+    body{
+        display: none;
+    }
 
 /* Media Query End */
